

  06 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.5.ebuild:
  Bump to latest aufs3 release

  25 Feb 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.9.ebuild,
  -lh-sources-3.12.10.ebuild, -lh-sources-3.12.11.ebuild,
  -lh-sources-3.13.0.ebuild, -lh-sources-3.13.1.ebuild,
  -lh-sources-3.13.2.ebuild, -lh-sources-3.13.3.ebuild,
  -lh-sources-3.13.4.ebuild, +lh-sources-3.13.5.ebuild:
  Bump to latest aufs3, linux and genpatch release

*lh-sources-3.13.4 (24 Feb 2014)

  24 Feb 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.4.ebuild:
  Bump to latest aufs3, linux and genpatch release

  15 Feb 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.10.ebuild,
  +lh-sources-3.12.11.ebuild:
  Bump to latest genpatches and linux release

*lh-sources-3.12.11 (15 Feb 2014)

  15 Feb 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.10.ebuild,
  +lh-sources-3.12.11.ebuild:
  Bump to latest genpatches and linux release

*lh-sources-3.13.3 (14 Feb 2014)

  14 Feb 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.12.10.ebuild,
  +lh-sources-3.13.3.ebuild:
  Bump to latest BFQ, genpatches and linux release

*lh-sources-3.12.10 (11 Feb 2014)
*lh-sources-3.13.2 (11 Feb 2014)

  11 Feb 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.10.ebuild,
  +lh-sources-3.13.2.ebuild:
  sys-kernel/lh-sources: Bump to latest aufs3, linux and genpatches release

*lh-sources-3.13.1 (29 Jan 2014)

  29 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.1.ebuild:
  sys-kernel/lh-sources: Bump to latest genpatches and linux releases

  28 Jan 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.7.ebuild,
  -lh-sources-3.12.8.ebuild:
  sys-kernel/lh-sources: Drop old

*lh-sources-3.12.9 (28 Jan 2014)

  28 Jan 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.9.ebuild,
  lh-sources-3.13.0.ebuild:
  Bump BFQ patch

  27 Jan 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.0.ebuild:
  Fix aufs3 release

*lh-sources-3.13.0 (23 Jan 2014)
