@@ -2,11 +2,14 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r2-3.13.patch1 3347 SHA256 
 DIST 0002-block-introduce-the-BFQ-v7r2-I-O-sched-for-3.13.patch1 186503 SHA256 85ff750be365e33a0c54898cabfaf299f62a81e1ec142d36508b19f88f2ab8a7 SHA512 cf23d84dbb16ed5d91995e0d579b0f60f0839a0935812c194207168fd88a52da698db95c0fd588fe52b73ffa45751d512640b810a1f7b18d567e5fbab8f9b37e WHIRLPOOL 1aa9c59fe72ebd4143db9ae8ae09d473eab3b443cd7a73567b13c6b7e1372f9e42b6c4b2c442087369c76c8f2253057f3a81d0176d2e26ed0ea327df2ff8e264
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r2-for-3.13.0.patch1 34619 SHA256 254f8d1670234c2a9a99bec44ad0bafa9121b12f98ba78e3dae795b9e51faff7 SHA512 7eb1be54038c84b56d4461f4cad307eb71f1059cc5d0fdd1a77294f399a5a62d44510e152bb65273cff8e235c7f0bf12f2df0d5b787fa5acdea7b4bc477ac3f8 WHIRLPOOL ad3f022da8848024c70786a3c9de2f9243317fa285e0e04bfe068ba929464ea038201532e543cc267635380d92d266456b9cb202aea7654a4e78854969d5e8d3
 DIST README-3.13.5.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
+DIST README-3.13.6.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad0534e2d69f13c6339ef4 SHA512 85832448f132d5e637c80cc71b475b6b1c8c6cf7cadb34ec8311de66506f749adab9709053fad32129a773b17d9efab3a5ac9b3e63f02948cdacf0de5777c7f3 WHIRLPOOL 2837584a5d6e6528da6dbb7a0b23f73bd08b0d4d94fdd3b9c160952921b5e2dec0d5fb5807d9e869824c2a43fb9fad61bdf054e011f2d0f3746be09a469500a5
 DIST aufs-sources-3.13_p20140303.tar.xz 152112 SHA256 f5985f50cde210a99dae027cd4f4e73daa5755b2e916fa8b1e987f7229971a23 SHA512 d1b1c144eeb2b9ae57a16b57409f69591ab1e9cb1db33dba9548998c578cde3a18d711ee272c049ec88b8a6611c5a7e0050dca027dc6be9365540fa6f7a0be22 WHIRLPOOL 93cefd96908f4def5936eab0018ba7816994a9f0a3267a0c17be46ef53299904f7d4288c86a132e4d16e06f3911fd12d034d0bd9dda72c72af0e26f37a14bd18
 DIST deblob-3.13 122060 SHA256 8fc8f5242cd58f8560d1caecdc6ab786d6470660280f910a8b70bc47fae5eabb SHA512 90c329c7b2e49ca8e51b3ccd5ede999f01a70ce1b227f958f34306d32414787192d51481a22ae831c30179e2ef83bdf4eb5c356b49864ab8d7b5a9ed6baed294 WHIRLPOOL 56a7dc599ece173ace43a633ddf2d1fc4876b392e8cd31dfe840a6109eebed18a8a9c33c7e191ea9cf0b605818a59312c76787c77aa479b6c84feb23083c0fb4
 DIST deblob-check-3.13 612002 SHA256 55a9264ad886259c9b20f1365245a993482a0f593d01e1824eddb748bc57e271 SHA512 64d93694acc9dd1046e967b0d0f285068cc248815a3c84c58aa4cb3b6bbc3fdcda4bce3b119b44f522a9cb6cfc10a0992cb5d19f880c7d6055c5c0ed3201905c WHIRLPOOL 1b196a945f5f07c78eff5e8742472b0d8ff570c7e11e2cd3d4d954f8fbd260b27b2779f2d794a30992e4d492b873d5f73163501a0c04372e0167e98640d587c5
 DIST genpatches-3.13-8.base.tar.xz 138020 SHA256 f3e048a313ab55bcadb5a44036c6421d316102e6aee15c15dc13f1ba8d516fa2 SHA512 bfb9d7b221a2b0d302f5f8453784886ce553b0e8e8a2faf29e3b1f95611c745dcfce4293d5e768e878f2b88aed3866a9f38545b8551b9db3fca18d39a966c1a5 WHIRLPOOL a8bb17a0815bb7a369ae371ce1939bf2d38d9d2324653e77c16ded0d31f8891824fdb08879c2315d99ee55d6bcb130a3b1589c79f5431945042433c8a0c57d69
 DIST genpatches-3.13-8.extras.tar.xz 18168 SHA256 a00603ac5ca73f37261c2dca4f8c396a9d2b988fd326c793d9016fe8355e790a SHA512 25fd010838a4de56a513dbb21cb1ffd3c99566cdfd55011f1fe25811d1b2c882c62be6d6904115f1f1aa894bc917a61fdf5009c119e2a2614d39d3c258382453 WHIRLPOOL 7d245c855d6ac0b501317d33924fdd8c92ac2dd5b13ea0377fd169e01df27442413dd4e648d7f71e96a1e071f5788553dfcc7db3f12ea9ecf5efbbd3614eaaeb
+DIST genpatches-3.13-9.base.tar.xz 193284 SHA256 f507ccb65f1c2cbeee86e4e5949f62db924f5cd9cd35b3962e478802c2279995 SHA512 49540e2c4aae2641a14c27c88888a52358298711d682865ae39128f1d5935325c0bf901cb58ad8d5477940efaee87e5bbd4d758ff4daca88fc23765d8ee176a3 WHIRLPOOL d30fe74184a549493da4fd2ee1b0bd7d75e5439c8387d7d81bc9319926be8706db3e177d5e91b073c988c49a7ff2d2be63854a1e7b43472675844c512daddbc7
+DIST genpatches-3.13-9.extras.tar.xz 18184 SHA256 cede36eae206fe92a5eaffe068d27cc5095eaa7a64d5edd579fffffd0730a2c8 SHA512 4063d9a26e749a1bd5758598104e31dcbb34d5daea1c2a54aebc21a2d38a983eb2d4d7c2583caea844ec70b1e8d3e25616a28bebc1b533e68076bf6daf8e71ff WHIRLPOOL 6b682c0bced62aeb937d5c11939a55209a6a325a4a8b0c9234f111b9b0f1ff9aef4d15ae9988fbdb9746722eb4e4d9ed82356d6731d12140d39ef9f54ef31d38
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-391b268db43db7e45acdec900adebb2d1545db9f.patch 13917 SHA256 6663d52214c11ad1b76cdbc0e4ba2864747682c56319b5de31f7bb24251a0ebf SHA512 17ff40ac339ce8f0a6cc503859d3480011555688239277e14a80f767515bd8644ac2452fa8e3ca093e4c977f79428197cdf30239816f6bb6bfc27407b3f6c033 WHIRLPOOL cda377a9b8d8fa549d24856b78b9109de4aba6bf8e84b08a2486788ae59f44f715cd3f191b69d8ce4ff536414ca0bf635a4c524d515519710be09388a0327488
 DIST linux-3.13.tar.xz 77187032 SHA256 4d5e5eee5f276424c32e9591f1b6c971baedc7b49f28ce03d1f48b1e5d6226a2 SHA512 1ba223bb4b885d691a67196d86a8aaf7b4a1c351bf2a762f50f1b0c32da00dd0c28895872a66b49e8d244498d996876609268e64861d28ac4048886ef9f79b87 WHIRLPOOL 2992257a17e85b3eb16fcaf21678fa6dbf31f80c2099fd1ad0ff9852ac1d16122ac8e2c0b46421d8895d4368253a724e439cd625307ee7af7bd1e50cb2c9b62a
